--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.cm-editor.ͼ1.ͼ2.ͼq:before {
+    content: '';
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: var(--obsidian-editor-background-image);
+    opacity: var(--obsidian-editor-background-opacity);
+    filter: var(--obsidian-editor-background-bluriness);
+}
