Added background in reading view, updated to 1.2.0 and synced lockfile

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
+.markdown-reading-view:before,
 .cm-editor:before {
-    content: '';
-    background-blend-mode: overlay;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-image: var(--obsidian-editor-background-image);
-    opacity: var(--obsidian-editor-background-opacity);
-    filter: var(--obsidian-editor-background-bluriness);
+	content: "";
+	background-blend-mode: overlay;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-image: var(--obsidian-editor-background-image);
+	opacity: var(--obsidian-editor-background-opacity);
+	filter: var(--obsidian-editor-background-bluriness);
 }
 
+.markdown-reading-view,
 .cm-editor .cm-contentContainer {
-    background: var(--obsidian-editor-background-input-contrast);
+	background: var(--obsidian-editor-background-input-contrast);
 }
