feature: customize position & fix padding

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 	content: "";
 	background-blend-mode: overlay;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: var(--obsidian-editor-background-position);
 	background-size: cover;
 	width: 100%;
 	height: 100%;
@@ -16,4 +16,31 @@
 .markdown-reading-view,
 .cm-editor .cm-contentContainer {
 	background: var(--obsidian-editor-background-input-contrast);
+    padding-left: var(--obsidian-editor-background-line-padding);
+    padding-right: var(--obsidian-editor-background-line-padding);
 }
+
+/* This sets the background for the whole app, seen with a positive z-index. However, the z-index disrupts interactions.
+.horizontal-main-container:before {
+	content: "";
+	background-blend-mode: overlay;
+	background-repeat: no-repeat;
+	background-position: var(--obsidian-editor-background-position);
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background-image: var(--obsidian-editor-background-image);
+	opacity: var(--obsidian-editor-background-opacity);
+	filter: var(--obsidian-editor-background-bluriness);
+}
+
+.horizontal-main-container {
+	background: var(--obsidian-editor-background-input-contrast);
+}
+.markdown-reading-view,
+.cm-editor .cm-contentContainer {
+    padding-left: var(--obsidian-editor-background-line-padding);
+    padding-right: var(--obsidian-editor-background-line-padding);
+}
+*/
